--- a/run.ipynb
+++ b/run.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cae48b89",
    "metadata": {},
    "outputs": [
@@ -85,10 +85,10 @@
     "    print(\"실행 완료\")\n",
     "    \n",
     "    #json 형식이나 쿼리스트링으로 전송시 문자열로 전송하기 위해 내용 처리\n",
-    "    result = str(result).replace(\"'\",\"\").replace('\"','').replace(\"{\",\"\").replace(\"}\",\"\").\\\n",
-    "                         replace(\"[\",\"\").replace(\"]\",\"\").replace(\":\",\",\")\n",
+    "    #result = str(result).replace(\"'\",\"\").replace('\"','').replace(\"{\",\"\").replace(\"}\",\"\").replace(\"[\",\"\").replace(\"]\",\"\").replace(\":\",\",\")\n",
     "    \n",
     "    #return redirect(\"http://192.168.0.111:5500/construction_result.html?result=\"+str(result))\n",
+    "    print(result)\n",
     "    return result\n",
     "\n",
     "if __name__ == '__main__':\n",
